<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageButton
        android:id="@+id/btnRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.34"
        android:contentDescription="@string/record"
        android:src="@drawable/ic_record" />

    <ImageButton
        android:id="@+id/btnPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.33"
        android:contentDescription="@string/pause"
        android:src="@drawable/ic_pause"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.33"
        android:contentDescription="@string/stop"
        android:src="@drawable/ic_stop" />

    <ImageButton
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.33"
        android:contentDescription="@android:string/cancel"
        android:src="@drawable/ic_cancel" />

</LinearLayout>